# spirv-cross2-rs

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  gen_opts.py  glsl_opts  hlsl_opts  msl_opts  spirv-cross2.sln
.github/workflows/: build.yml
bindings_generator/: Cargo.toml
bindings_generator/src/: callbacks.rs  main.rs
spirv-cross-sys/: .gitmodules  Cargo.toml  build.rs
spirv-cross-sys/native/: spirv_cross_c_ext_rs.cpp  spvc_set.cpp  wrapper.h
spirv-cross-sys/src/: bindings.rs  lib.rs
spirv-cross2/: Cargo.toml
spirv-cross2-derive/: Cargo.toml
spirv-cross2-derive/src/: derive.rs  lib.rs
spirv-cross2/src/: cell.rs  error.rs  handle.rs  iter.rs  lib.rs  string.rs  sync.rs  targets.rs
spirv-cross2/src/compile/: mod.rs
spirv-cross2/src/compile/glsl/: mod.rs
spirv-cross2/src/compile/hlsl/: mod.rs
spirv-cross2/src/compile/msl/: mod.rs
spirv-cross2/src/compiler/: buffers.rs  combined_image_samplers.rs  constants.rs  decorations.rs  entry_points.rs  execution_modes.rs  misc.rs  mod.rs  names.rs  resources.rs  types.rs
spirv-cross2/src/compiler/hlsl/: mod.rs
spirv-cross2/src/reflect/: buffers.rs  combined_image_samplers.rs  constants.rs  decorations.rs  entry_points.rs  execution_modes.rs  mod.rs  names.rs  resources.rs  types.rs
spirv-cross2/src/reflect/constants/: gfx_maths.rs  glam.rs  half.rs
spirv-cross2/src/spirv/: mod.rs
spirv-cross2/tests/: sandbox.rs
