[package]
name = "spirv-cross-sys"
version = "0.1.0"
edition = "2021"


license = "MIT OR Apache-2.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
description = "Raw bindings to SPIRV-Cross"
categories = ["rendering", "rendering::graphics-api"]
repository = "https://github.com/SnowflakePowered/spirv-cross2"
keywords = ["spirv", "shaders"]

[dependencies]
thiserror = "1.0.63"
bytemuck = "1.17.1"

[build-dependencies]
cc = "1.0"
glob = "0.3"


[dev-dependencies]
glslang = "0.4.0"