[package]
name = "spirv-cross-sys"
version = "0.4.1+f84c1fb"
edition = "2021"


license = "MIT OR Apache-2.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
description = "Raw bindings to SPIRV-Cross"
categories = ["rendering", "rendering::graphics-api"]
repository = "https://github.com/SnowflakePowered/spirv-cross2"
keywords = ["spirv", "shaders"]
readme = "../README.md"

[dependencies]
bytemuck = "1.17.1"
num-traits = "0.2"
num-derive = "0.4.2"

[features]
glsl = []
msl = ["glsl"]
hlsl = ["glsl"]
json = ["glsl"]
cpp = ["glsl"]


[build-dependencies]
cc = {  version = "1.0", features = ["parallel"] }

[dev-dependencies]
glslang = "0.4.0"