[package]
name = "spirv-cross2-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
description = "spirv-cross2 derive macros"
repository = "https://github.com/SnowflakePowered/spirv-cross2"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0"}
quote = "1.0"
proc-macro2 = "1.0.86"

[dev-dependencies]
spirv-cross-sys = { version = "0.4.0", path = "../spirv-cross-sys"}