[package]
name = "spirv-cross2"
version = "0.4.0"
edition = "2021"

license = "MIT OR Apache-2.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
description = "Safe Rust bindings to SPIRV-Cross"
categories = ["compilers", "rendering", "external-ffi-bindings"]
repository = "https://github.com/SnowflakePowered/spirv-cross2"
keywords = ["spir-v", "glsl", "msl", "shaders", "spirv-cross"]

rust-version = "1.70.0"
readme = "../README.md"

[dependencies]
spirv-cross-sys = { version = "0.4.0", path = "../spirv-cross-sys" }
spirv-cross2-derive = { version = "0.1.0", path = "../spirv-cross2-derive" }

bytemuck = { version = "1.17.1", features = ["must_cast"] }
thiserror = "1.0.63"
bitflags = "2.6.0"

half = { version = "2.4.1", optional = true }
gfx-maths = { version = "0.2.9", optional = true }
memchr = "2.7.4"

spirv = "0.3.0"

[features]
default = ["glsl", "hlsl", "msl"]
full = ["gfx-math-types", "f16", "glsl", "hlsl", "msl", "json", "cpp"]

f16 = ["dep:half"]
gfx-math-types = ["dep:gfx-maths"]

glsl = ["spirv-cross-sys/glsl"]
hlsl = ["spirv-cross-sys/hlsl"]
msl = ["spirv-cross-sys/msl"]
json = ["spirv-cross-sys/json"]
cpp = ["spirv-cross-sys/cpp"]

[dev-dependencies]
glslang = "0.4.0"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]